--- a/popup.html
+++ b/popup.html
@@ -5,18 +5,24 @@
  value "popup.html".
  -->
 <html>
-  <head>
+<head>
     <title>Acronym Finder</title>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <style>
-      body {
-        font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
-        font-size: 100%;
-      }
+        body {
+            font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
+            font-size: 100%;
+        }
     </style>
     <script src="scripts/popup.js"></script>
-  </head>
-  <body>
-    <p>Hello world</p>
-  </body>
+</head>
+<body>
+<p>Acronym Finder</p>
+
+<label class="switch">
+    <input type="checkbox" id="acrEnableSwitcher" checked>
+    <span class="slider round"></span>
+    Enable
+</label>
+</body>
 </html>
