--- a/popup.html
+++ b/popup.html
@@ -17,12 +17,15 @@
     <script src="scripts/popup.js"></script>
 </head>
 <body>
-<p>Acronym Finder</p>
+<div class="" style="min-width: 150px">
+    <p>Acronym Finder</p>
 
-<label class="switch">
-    <input type="checkbox" id="acrEnableSwitcher" checked>
-    <span class="slider round"></span>
-    Enable
-</label>
+    <label class="switch">
+        <input type="checkbox" id="acrEnableSwitcher" checked>
+        <span class="slider round"></span>
+        Enable
+    </label>
+</div>
+
 </body>
 </html>
