--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
  -->
 <html>
 <head>
-    <title>Acronym Finder</title>
+    <title>AIcronym</title>
     <meta charset="utf-8"/>
     <style>
         body {
@@ -18,7 +18,7 @@
 </head>
 <body>
 <div class="" style="min-width: 150px">
-    <p>Acronym Finder</p>
+    <p>AIcronym</p>
 
     <label class="switch">
         <input type="checkbox" id="acrEnableSwitcher" checked>
